--- a/frontend/src/app/claims/claims.component.html
+++ b/frontend/src/app/claims/claims.component.html
@@ -1,4 +1,4 @@
-<div class="card-body">
+<div class="card-body card-bg">
   <div class="card">
     <div class="card-body">
       <h4 translate>claim.searchClaim</h4>
