--- a/frontend/src/app/claims/claims.component.html
+++ b/frontend/src/app/claims/claims.component.html
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-sm">
 
-          <button type="button" mdbBtn color="success" class="btn btn-sm btn-info" style="width: 200px; float: right"
+          <button type="button" mdbBtn color="success" (click)="findClaims(1)" class="btn btn-sm btn-info" style="width: 200px; float: right"
                   mdbWavesEffect>
             <span class="fa fa-search" translate> search</span>
           </button>
