--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -178,25 +178,25 @@
                         <div class="form-group row">
                           <label for="name" class="col-sm-3 col-form-label" translate>name</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" [ngModel]="application.firstName">
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="surname" class="col-sm-3 col-form-label" translate>surname</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="surname">
+                            <input type="text" class="form-control" id="surname" [ngModel]="application.surname">
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="patronymic" class="col-sm-3 col-form-label" translate>patronymic</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="patronymic">
+                            <input type="text" class="form-control" id="patronymic" [ngModel]="application.patronymic">
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="clientID" class="col-sm-3 col-form-label" translate>claim.clientID</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="clientID">
+                            <input type="text" class="form-control" id="clientID" [ngModel]="application.clientId">
                           </div>
                         </div>
                       </div>
@@ -204,13 +204,13 @@
                         <div class="form-group row">
                           <label for="contacts" class="col-sm-3 col-form-label" translate>claim.contacts</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="contacts">
+                            <input type="text" class="form-control" id="contacts" [ngModel]="application.phoneNumber">
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="email" class="col-sm-3 col-form-label" translate>claim.email</label>
                           <div class="col-sm-9">
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" [ngModel]="application.email">
                           </div>
                         </div>
                         <div class="form-group row">
