--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -72,7 +72,7 @@
   <!--/.Navbar -->
 
   <router-outlet [hidden]="loading"></router-outlet>
-
+  <toast-messages></toast-messages>
   <!-- Footer -->
   <footer class="page-footer font-small cyan darken-3 fixed-bottom" *ngIf="currentUser">
 
