--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,54 +1,43 @@
 <div class="container my-5 py-5 z-depth-1">
 
-  <!--Section: Content-->
   <section class="px-md-5 mx-md-5 text-center text-lg-left dark-grey-text">
-
-    <!--Grid row-->
     <div class="row d-flex justify-content-center">
-
-      <!--Grid column-->
       <div class="col-md-6">
-
-        <!-- Default form login -->
-        <form class="text-center">
+        <div class="text-center" [formGroup]="loginForm" >
 
           <p class="h4 mb-4">Логотип</p>
 
-          <input type="text" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="Логин">
+          <input type="text" class="form-control mb-4" placeholder="Логин"
+                 formControlName="username" [ngModel]="loginForm.username"/>
 
-          <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Пароль">
+          <div class="input-group mb-3">
+            <input type="password" class="form-control" placeholder="Пароль" #x aria-label="password"
+                   aria-describedby="basic-addon2" formControlName="password" [ngModel]="loginForm.password">
+            <div class="input-group-append">
+              <a class="input-group-text" id="basic-addon2" (click)="x.type=x.type=='password'?'text':'password'"><i
+                aria-hidden="true" class="fa fa-eye"></i></a>
+            </div>
+          </div>
 
           <div class="d-flex justify-content-around">
             <div>
-              <!-- Remember me -->
               <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
+                <input type="checkbox" class="custom-control-input" [ngModel]="loginForm.rememberMe" id="defaultLoginFormRemember"
+                       formControlName="rememberMe" />
                 <label class="custom-control-label" for="defaultLoginFormRemember">Запомнить меня</label>
               </div>
             </div>
             <div>
-              <!-- Forgot password -->
               <a href="">Забыли пароль?</a>
             </div>
           </div>
-
-          <!-- Sign in button -->
-          <button [disabled]="loading" class="btn btn-info btn-block my-4" (click)="onSubmit()">
+          <button [disabled]="loading" class="btn btn-info btn-block my-4" (click)="login()">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Вход
           </button>
-        </form>
-        <!-- Default form login -->
 
+        </div>
       </div>
-      <!--Grid column-->
-
     </div>
-    <!--Grid row-->
-
-
   </section>
-  <!--Section: Content-->
-
-
 </div>
