--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -34,7 +34,7 @@
 
           <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
              aria-haspopup="true" aria-expanded="false">
-            <i class="fa fa-user"></i> Иванов иван
+            <i class="fa fa-user"></i>{{currentUser.firstName}}
           </a>
           <div class="dropdown-menu dropdown-menu-right dropdown-default"
                aria-labelledby="navbarDropdownMenuLink-333">
@@ -74,60 +74,60 @@
   <router-outlet [hidden]="loading"></router-outlet>
   <toast-messages></toast-messages>
   <!-- Footer -->
-  <footer class="page-footer font-small cyan darken-3 fixed-bottom" *ngIf="currentUser">
+<!--  <footer class="page-footer font-small cyan darken-3 fixed-bottom" *ngIf="currentUser">-->
 
-    <!-- Footer Elements -->
-    <div class="container">
+<!--    &lt;!&ndash; Footer Elements &ndash;&gt;-->
+<!--    <div class="container">-->
 
-      <!-- Grid row-->
-      <div class="row">
-        <div class="row">
-          <h1 class="text-justify text-reset">СТАНЬ АГЕНТОМ ГОДА И ВЫИГРАЙ ПУТЕВКУ В ШВЕЙЦАРИЮ</h1>
-        </div>
-        <!-- Grid column -->
-<!--        <div class="col-md-12 py-5">-->
-<!--          <div class="mb-5 flex-center">-->
-
-<!--            &lt;!&ndash; Facebook &ndash;&gt;-->
-<!--            <a class="fb-ic">-->
-<!--              <i class="fa fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--            </a>-->
-<!--            &lt;!&ndash; Twitter &ndash;&gt;-->
-<!--            <a class="tw-ic">-->
-<!--              <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--            </a>-->
-<!--            &lt;!&ndash; Google +&ndash;&gt;-->
-<!--            <a class="gplus-ic">-->
-<!--              <i class="fa fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--            </a>-->
-<!--            &lt;!&ndash;Linkedin &ndash;&gt;-->
-<!--            <a class="li-ic">-->
-<!--              <i class="fa fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--            </a>-->
-<!--            &lt;!&ndash;Instagram&ndash;&gt;-->
-<!--            <a class="ins-ic">-->
-<!--              <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>-->
-<!--            </a>-->
-<!--            &lt;!&ndash;Pinterest&ndash;&gt;-->
-<!--            <a class="pin-ic">-->
-<!--              <i class="fa fa-pinterest fa-lg white-text fa-2x"> </i>-->
-<!--            </a>-->
-<!--          </div>-->
+<!--      &lt;!&ndash; Grid row&ndash;&gt;-->
+<!--      <div class="row">-->
+<!--        <div class="row">-->
+<!--          <h1 class="text-justify text-reset">СТАНЬ АГЕНТОМ ГОДА И ВЫИГРАЙ ПУТЕВКУ В ШВЕЙЦАРИЮ</h1>-->
 <!--        </div>-->
-        <!-- Grid column -->
+<!--        &lt;!&ndash; Grid column &ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="col-md-12 py-5">&ndash;&gt;-->
+<!--&lt;!&ndash;          <div class="mb-5 flex-center">&ndash;&gt;-->
 
-      </div>
-      <!-- Grid row-->
+<!--&lt;!&ndash;            &lt;!&ndash; Facebook &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <a class="fb-ic">&ndash;&gt;-->
+<!--&lt;!&ndash;              <i class="fa fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>&ndash;&gt;-->
+<!--&lt;!&ndash;            </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            &lt;!&ndash; Twitter &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <a class="tw-ic">&ndash;&gt;-->
+<!--&lt;!&ndash;              <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>&ndash;&gt;-->
+<!--&lt;!&ndash;            </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            &lt;!&ndash; Google +&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <a class="gplus-ic">&ndash;&gt;-->
+<!--&lt;!&ndash;              <i class="fa fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>&ndash;&gt;-->
+<!--&lt;!&ndash;            </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            &lt;!&ndash;Linkedin &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <a class="li-ic">&ndash;&gt;-->
+<!--&lt;!&ndash;              <i class="fa fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>&ndash;&gt;-->
+<!--&lt;!&ndash;            </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            &lt;!&ndash;Instagram&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <a class="ins-ic">&ndash;&gt;-->
+<!--&lt;!&ndash;              <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>&ndash;&gt;-->
+<!--&lt;!&ndash;            </a>&ndash;&gt;-->
+<!--&lt;!&ndash;            &lt;!&ndash;Pinterest&ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;            <a class="pin-ic">&ndash;&gt;-->
+<!--&lt;!&ndash;              <i class="fa fa-pinterest fa-lg white-text fa-2x"> </i>&ndash;&gt;-->
+<!--&lt;!&ndash;            </a>&ndash;&gt;-->
+<!--&lt;!&ndash;          </div>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--        &lt;!&ndash; Grid column &ndash;&gt;-->
 
-    </div>
-    <!-- Footer Elements -->
+<!--      </div>-->
+<!--      &lt;!&ndash; Grid row&ndash;&gt;-->
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> htc.kz</a>
-    </div>
-    <!-- Copyright -->
+<!--    </div>-->
+<!--    &lt;!&ndash; Footer Elements &ndash;&gt;-->
 
-  </footer>
+<!--    &lt;!&ndash; Copyright &ndash;&gt;-->
+<!--    <div class="footer-copyright text-center py-3">© 2020 Copyright:-->
+<!--      <a href="https://mdbootstrap.com/"> htc.kz</a>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; Copyright &ndash;&gt;-->
+
+<!--  </footer>-->
   <!-- Footer -->
 </div>
