--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -19,7 +19,7 @@
          aria-selected="false" translate>claim.journals</a>
     </li>
   </ul>
-  <div class="tab-content" id="myTabContent">
+  <div class="tab-content" id="myTabContent" [formGroup]="applicationForm">
     <div class="tab-pane fade show active" id="fillClaims" role="tabpanel" aria-labelledby="fillClaims-tab">
       <div class="card-body">
         <div class="row">
@@ -44,8 +44,14 @@
                           <div class="col-sm">
                             <ng-select
                               class="form-control"
+                              [(ngModel)]="applicationForm.operationTypeId"
+                              [ngClass]="{'border-danger': !applicationForm.operationTypeId}"
+                              formControlName="operationTypeId"
                               placeholder="{{ 'patterns.chooseElement' | translate }}">
                             </ng-select>
+                            <div *ngIf="f.operationTypeId.touched && f.operationTypeId.invalid" class="alert alert-danger">
+                              <div *ngIf="f.operationTypeId.errors.required">Name is required.</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -55,8 +61,14 @@
                           <div class="col-sm">
                             <ng-select
                               class="form-control"
+                              [(ngModel)]="applicationForm.objectTypeId"
+                              [ngClass]="{'border-danger': !applicationForm.objectTypeId}"
+                              formControlName="objectTypeId"
                               placeholder="{{ 'patterns.chooseElement' | translate }}">
                             </ng-select>
+                            <div *ngIf="f.objectTypeId.touched && f.objectTypeId.invalid" class="alert alert-danger">
+                              <div *ngIf="f.objectTypeId.errors.required">Name is required.</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -64,10 +76,14 @@
                         <label class="control-labels" translate>claim.objectPriceInLim</label>
                         <div class="row">
                           <div class="col-sm">
-                            <ng-select
-                              class="form-control"
-                              placeholder="{{ 'patterns.chooseElement' | translate }}">
-                            </ng-select>
+                            <input type="number" class="form-control" id="name"
+                                   [(ngModel)]="applicationForm.objectPrice"
+                                   [ngClass]="{'border-danger': !applicationForm.objectPrice}"
+                                   formControlName="objectPrice"
+                            />
+                            <div *ngIf="f.objectPrice.touched && f.objectPrice.invalid" class="alert alert-danger">
+                              <div *ngIf="f.objectPrice.errors.required">Name is required.</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -178,25 +194,50 @@
                         <div class="form-group row">
                           <label for="name" class="col-sm-3 col-form-label" translate>name</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="name" >
+                            <input type="text" class="form-control" id="name"
+                                   [(ngModel)]="applicationForm.firstName"
+                                   [ngClass]="{'border-danger': !applicationForm.firstName}"
+                                   formControlName="firstName"
+                            />
+                            <div *ngIf="f.firstName.touched && f.firstName.invalid" class="alert alert-danger">
+                              <div *ngIf="f.firstName.errors.required">Name is required.</div>
+                              <div *ngIf="f.firstName.errors.minlength">Name should be 3 character.</div>
+                            </div>
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="surname" class="col-sm-3 col-form-label" translate>surname</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="surname" >
+                            <input type="text" class="form-control" id="surname" formControlName="surname"
+                                   [(ngModel)]="applicationForm.surname"
+                                   [ngClass]="{'border-danger': !applicationForm.surname}"/>
+                            <div *ngIf="f.surname.touched && f.surname.invalid" class="alert alert-danger">
+                              <div *ngIf="f.surname.errors.required">Name is required.</div>
+                              <div *ngIf="f.surname.errors.minlength">Name should be 3 character.</div>
+                            </div>
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="patronymic" class="col-sm-3 col-form-label" translate>patronymic</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="patronymic" >
+                            <input type="text" class="form-control" id="patronymic"
+                                   [(ngModel)]="applicationForm.patronymic"
+                                   formControlName="patronymic"
+                            />
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="clientID" class="col-sm-3 col-form-label" translate>claim.clientID</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="clientID" >
+                            <input type="text" class="form-control" id="clientID"
+                                   [(ngModel)]="applicationForm.clientId"
+                                   [ngClass]="{'border-danger': !applicationForm.clientId}"
+                                   formControlName="clientId"
+                            />
+                            <div *ngIf="f.clientId.touched && f.clientId.invalid" class="alert alert-danger">
+                              <div *ngIf="f.clientId.errors.required">Name is required.</div>
+                              <div *ngIf="f.clientId.errors.minlength">Name should be 3 character.</div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -204,13 +245,24 @@
                         <div class="form-group row">
                           <label for="contacts" class="col-sm-3 col-form-label" translate>claim.contacts</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" id="contacts">
+                            <input type="text" class="form-control" id="contacts"
+                                   [(ngModel)]="applicationForm.phoneNumber"
+                                   [ngClass]="{'border-danger': !applicationForm.phoneNumber}"
+                                   formControlName="phoneNumber"
+                            />
+                            <div *ngIf="f.phoneNumber.touched && f.phoneNumber.invalid" class="alert alert-danger">
+                              <div *ngIf="f.phoneNumber.errors.required">Name is required.</div>
+                              <div *ngIf="f.phoneNumber.errors.minlength">Name should be 3 character.</div>
+                            </div>
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="email" class="col-sm-3 col-form-label" translate>claim.email</label>
                           <div class="col-sm-9">
-                            <input type="email" class="form-control" id="email" >
+                            <input type="email" class="form-control" id="email"
+                                   [(ngModel)]="applicationForm.email"
+                                   formControlName="email"
+                            />
                           </div>
                         </div>
                         <div class="form-group row">
