--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -659,7 +659,7 @@
     <div class="col-sm">
 
       <button type="button" mdbBtn color="success" class="btn btn-sm btn-info" style="width: 200px; float: right"
-              mdbWavesEffect>
+              mdbWavesEffect (click)="submit()">
         <span class="fa fa-save" translate> claim.saveClaim</span>
       </button>
       <button type="button" class="btn btn-sm btn-success" style="width: 200px;float: right" translate>
