--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,6 @@
+@import "~@ng-select/ng-select/themes/default.theme.css";
+@import "~angular-notifier/styles";
+
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: 'Cuprum', sans-serif!important;
